--- a/deploy/docker/docker-compose.yaml
+++ b/deploy/docker/docker-compose.yaml
@@ -3,23 +3,23 @@ version: "3"
 
 services:
 
-  aap:
+  bookshelves:
     build:
       dockerfile: deploy/docker/Dockerfile
       context: ../../
     environment:
-      AAP_ENVIRONMENT: production
-      AAP_STATIC_URL: http://${NGINX_HOST:-127.0.0.1}/static/
-      AAP_MEDIA_URL: http://${NGINX_HOST:-127.0.0.1}/media/
-      AAP_ALLOWED_HOSTS: "['143.244.145.69', '0.0.0.0', '127.0.0.1', 'localhost']"
-      AAP_DATABASES_PRODUCTION_HOST: db
-      AAP_DATABASES_PRODUCTION_USER: aap
-      AAP_DATABASES_PRODUCTION_PASSWORD: "!@#)(*D"
+      BOOKSHELVES_ENVIRONMENT: production
+      BOOKSHELVES_STATIC_URL: http://${NGINX_HOST:-127.0.0.1}/static/
+      BOOKSHELVES_MEDIA_URL: http://${NGINX_HOST:-127.0.0.1}/media/
+      BOOKSHELVES_ALLOWED_HOSTS: "['143.244.145.69', '0.0.0.0', '127.0.0.1', 'localhost']"
+      BOOKSHELVES_DATABASES_PRODUCTION_HOST: db
+      BOOKSHELVES_DATABASES_PRODUCTION_USER: bookshelves
+      BOOKSHELVES_DATABASES_PRODUCTION_PASSWORD: "!@#)(*D"
     ports:
       - "8000:8000"
     volumes:
-      - ../../aap/static/:/opt/aap/static/
-      - ../../aap/media/:/opt/aap/media/
+      - ../../bookshelves/static/:/opt/bookshelves/static/
+      - ../../bookshelves/media/:/opt/bookshelves/media/
     restart: on-failure
     depends_on:
       - db
@@ -30,8 +30,8 @@ services:
     volumes:
       - ./db/:/var/lib/postgresql/data
     environment:
-      POSTGRES_DB: aap
-      POSTGRES_USER: aap
+      POSTGRES_DB: bookshelves
+      POSTGRES_USER: bookshelves
       POSTGRES_PASSWORD: "!@#)(*D"
     restart: unless-stopped
 
@@ -40,9 +40,9 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ../../aap/static/:/www/data/static/
-      - ../../aap/media/:/www/data/media/
+      - ../../bookshelves/static/:/www/data/static/
+      - ../../bookshelves/media/:/www/data/media/
       - ./nginx.conf:/etc/nginx/nginx.conf
     restart: always
     depends_on:
-      - aap
+      - bookshelves
